--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -5,7 +5,7 @@
      <title>Chat Rooms</title>
  </head>
  <body>
-    请输入聊天室名称：
+     Please enter the name of the chating room you want to enter：<br />
      <input id="room-name-input" type="text" size="100">
      <input id="room-name-submit" type="button" value="Enter">
 
