--- a/templates/chat/room.html
+++ b/templates/chat/room.html
@@ -5,18 +5,18 @@
      <title>Chat Room {{ room_name }}</title>
  </head>
  <body>
-    Welcome to {{ room_name }} chat room <br/>
-    <textarea id="chat-log" rows="30" cols="100"></textarea><br/>
-     <input id="chat-message-input" type="text" size="100"><br/>
-     <input id="chat-message-submit" type="button" value="Send">
-    <script>
+     Welcome to {{ room_name }} chat room <br/>
+     <textarea id="chat-log" rows="30" cols="100"></textarea><br/>
+     <input id="input" type="text" size="100"><br/>
+     <input id="submit" type="button" value="Send">
+     <script>
         // 获取房间名
-        const roomName = '{{ room_name }}';
+        var roomName = '{{ room_name }}';
 
         // 根据roomName拼接websocket请求地址，建立长连接
         // 请求url地址为/ws/chat/<room_name>/
         const wss_protocol = (window.location.protocol === 'https:') ? 'wss://': 'ws://';
-        const chatSocket = new WebSocket(
+        var chatSocket = new WebSocket(
              wss_protocol + window.location.host + '/ws/chat/'  + roomName + '/'
             );
 
@@ -37,16 +37,16 @@
              console.error('Chat socket closed unexpectedly');
         };
 
-         document.querySelector('#chat-message-input').focus();
-         document.querySelector('#chat-message-input').onkeyup = function(e) {
+         document.querySelector('#input').focus();
+         document.querySelector('#input').onkeyup = function(e) {
              if (e.keyCode === 13) {  // enter, return
-                 document.querySelector('#chat-message-submit').click();
+                 document.querySelector('#submit').click();
             }
         };
 
          // 每当点击发送消息按钮，通过websocket的send方法向后台发送信息。
-         document.querySelector('#chat-message-submit').onclick = function(e) {
-             const messageInputDom = document.querySelector('#chat-message-input');
+         document.querySelector('#submit').onclick = function(e) {
+             const messageInputDom = document.querySelector('#input');
              const message = messageInputDom.value;
 
              //注意这里:先把文本数据转成json格式,然后调用send方法发送。
