--- a/templates/main.html
+++ b/templates/main.html
@@ -46,6 +46,7 @@ body {
     flex: 20%;
     background-color: lightcyan;
     padding: 20px;
+    line-height: 300%;
     text-align: center;
 }
 
@@ -112,7 +113,7 @@ body {
   <div class="side">
       <h5>*****INDEX*****</h5>
       <a href="chat">START CHATING</a><br />
-
+      <a href="help">HELP</a><br />
   </div>
   <div class="main">
       <img src="{% static 'image/main.jpg' %}" width="100%" height="100%" align="center">
