--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
 <head>
-<title>{{ ver }}-Log in</title>
+<title>Log in</title>
 <link rel="shortcut icon" href="{% static 'images/icon.ico' %}">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -106,7 +106,7 @@ body {
 <form action="/login" method="post">
     {% csrf_token %}
     <div class="header">
-  <h1><img src="{% static 'image/weichat.jpg' %}" width="80px" height="80px" align="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Log in</h1>
+  <h1><img src="{% static 'image/weichat.jpg' %}" width="80px" height="80px" align="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please Log in</h1>
   <p>@elepikachu 2023 / all right reserved</p>
 </div>
     <div class="navbar">
