--- a/templates/help.html
+++ b/templates/help.html
@@ -105,7 +105,7 @@ body {
 <body>
 
 <div class="header">
-  <h1><img src="{% static 'image/weichat.jpg' %}" width="80px" height="80px" align="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ ver }}-Help</h1>
+  <h1><img src="{% static 'image/weichat.jpg' %}" width="80px" height="80px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ ver }}-Help</h1>
   <p>@elepikachu 2023 / all right reserved</p>
 </div>
 
@@ -117,15 +117,17 @@ body {
   <div class="main">
       <p>
           <b>Weichat Help</b><br /><br />
-          1.Please Login first before using<br />
-          You need a inviting code before register.<br />
+          1.Please Log in first before using<br />
+          You need an inviting code before register.<br />
           If you don't have the code, please contact the manager.<br /><br />
-          2.Choose the chating room<br />
-          The same chating room will meet together<br /><br />
-          3.Start chating<br />
+          2.Choose the chat room<br />
+          Chat room name should be English and contains no space<br /><br />
+          The same chat room will meet together<br /><br />
+          3.Start chat<br />
           Enjoy it :)<br /><br />
-          4.Delete chating record<br />
-          Chating record will permentally deleted, please use this function with care<br /><br />
+          4.Delete chat record<br />
+          Chat record will be automatically permanently deleted<br /><br />
+          you don't need to worry about your privacy<br /><br />
           5.Logout<br />
           Don't forget logout the system before leave.<br /><br />
       </p>
