--- a/templates/login.html
+++ b/templates/login.html
@@ -106,7 +106,7 @@ body {
 <form action="/login" method="post">
     {% csrf_token %}
     <div class="header">
-  <h1><img src="{% static 'image/weichat.jpg' %}" width="80px" height="80px" align="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please Log in</h1>
+  <h1><img src="{% static 'image/weichat.jpg' %}" width="80px" height="80px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please Log in</h1>
   <p>@elepikachu 2023 / all right reserved</p>
 </div>
     <div class="navbar">
