--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -99,12 +99,12 @@ body {
 </head>
 <body>
 <div class="header">
-  <h1><img src="{% static 'image/weichat.jpg' %}" width="80px" height="80px" align="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{ ver }}-Chooce Chating Room</h1>
+  <h1><img src="{% static 'image/weichat.jpg' %}" width="80px" height="80px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{ ver }}-Chooce Chating Room</h1>
   <p>please chooce the room you want to enter</p>
 </div>
 
 <div class="navbar">
-  <a href="/chat/main">Main Chating Room</a>
+  <a href="/chat/main">Main Chat Room</a>
   <a href="/" class="right">Back to Main Page</a>
 </div>
 
