--- a/templates/choose.html
+++ b/templates/choose.html
@@ -133,7 +133,7 @@ body {
  <body>
  <div class="header">
   <h1><img src="{% static 'image/weichat.jpg' %}" width="80px" height="80px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; make a random choice</h1>
-  <p>Welcome to {{ room_name }} Chat Room</p>
+  <p>Use this when you have difficult making choice~</p>
 </div>
 
 <div class="navbar">
