--- a/templates/main.html
+++ b/templates/main.html
@@ -114,6 +114,7 @@ body {
       <h5>*****INDEX*****</h5>
       <a href="chat">START CHAT</a><br />
       <a href="help">HELP</a><br />
+      <a href="upload">UPLOAD USER IMAGE</a><br />
       <a href="chooce">RANDOM CHOICE</a><br />
   </div>
   <div class="main">
