--- a/templates/register.html
+++ b/templates/register.html
@@ -60,6 +60,10 @@ body {
     flex-wrap: wrap;
 }
 
+#info {
+    color: #999999;
+    font-size: 15px;
+}
 
 .side h5 {
     font-size: 20px;
@@ -101,6 +105,59 @@ body {
     }
 }
 </style>
+<script>
+    function length_judge() {
+        let pwd = document.getElementById('pwd');
+        let msg = document.getElementById('info');
+        if (pwd.value.length < 6 || pwd.value.length > 12) {
+            msg.innerText = "!password length too short or too long";
+            msg.style = "color:red";
+        } else {
+            msg.innerText = "*password satisfy the requirement";
+            msg.style = "color:green";
+        }
+    }
+    function password_match() {
+        let pwd1 = document.getElementById('pwd');
+        let pwd2 = document.getElementById('pwd2');
+        let msg = document.getElementById('info');
+        if (pwd1.value !== pwd2.value) {
+            msg.innerText = "!password not match";
+            msg.style = "color:red";
+        } else {
+            msg.innerText = "*password satisfy the requirement";
+            msg.style = "color:green";
+        }
+    }
+    function submit_res() {
+        let usr = document.getElementById('usr');
+        let pwd1 = document.getElementById('pwd');
+        let pwd2 = document.getElementById('pwd2');
+        let code = document.getElementById('cod');
+        if (usr.value === '') {
+            alert('username is empty');
+            return false;
+        }
+        if (usr.value.length > 12) {
+            alert('username too long');
+            return false;
+        }
+        if (pwd1.value.length < 6 || pwd1.value.length > 12) {
+            alert('password length too long or too short');
+            return false;
+        }
+        if (pwd1.value !== pwd2.value) {
+            alert('password not match');
+            return false;
+        }
+        if (code.value !== 'jng') {
+            alert('inviting code mistake');
+            return false;
+        }
+        alert('register success');
+        return true;
+    }
+</script>
 </head>
 <body>
 <form action="/register" method="post">
@@ -116,18 +173,21 @@ body {
     <div class="main">
     <h2>Please Input your information here</h2>
     <p>
-        UserName (will be used as your chating id) <input type="text" name="username">
+        UserName (will be used as your chating id) <input type="text" id="usr" name="username">
     </p>
     <p>
-        Password <input type="password" name="password1">
+        Password <input id="pwd" type="password" name="password1" onblur="length_judge()">
     </p>
     <p>
-        Repeat your password <input type="password" name="password2">
+        Repeat your password <input id="pwd2" type="password" name="password2" onblur="password_match()">
     </p>
     <p>
-        Inviting Code <input type="text" name="code">
+        Inviting Code <input id="cod" type="text" name="code">
     </p>
-    <input type="submit" name="submit" value="submit" size="5">
+    <p id="info">
+        *password should be 6-12 word length
+    </p>
+    <input type="submit" name="submit" value="submit" onclick="return submit_res()" size="5">
     <input type="reset" value="reset" name="reset" size="5">
         </div>
     </div>
